--- a/templates/base_mysql.html
+++ b/templates/base_mysql.html
@@ -70,6 +70,13 @@
                                         <i class="bi bi-person"></i> Profile
                                     </a>
                                 </li>
+                                {% if current_user.is_admin %}
+                                <li>
+                                    <a class="dropdown-item" href="{{ url_for('admin_dashboard') }}">
+                                        <i class="bi bi-gear"></i> Admin Dashboard
+                                    </a>
+                                </li>
+                                {% endif %}
                                 <li><hr class="dropdown-divider"></li>
                                 <li>
                                     <a class="dropdown-item" href="{{ url_for('auth_logout') }}">
