--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -141,19 +141,25 @@
                         </div>
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-md-4 col-sm-6 mb-3">
+                                <div class="col-md-3 col-sm-6 mb-3">
                                     <a href="{{ url_for('admin_users') }}" class="btn btn-outline-primary w-100">
                                         <i class="fas fa-users"></i><br>
                                         User Management
                                     </a>
                                 </div>
-                                <div class="col-md-4 col-sm-6 mb-3">
+                                <div class="col-md-3 col-sm-6 mb-3">
+                                    <a href="{{ url_for('admin_recipes') }}" class="btn btn-outline-danger w-100">
+                                        <i class="fas fa-book"></i><br>
+                                        Recipe Management
+                                    </a>
+                                </div>
+                                <div class="col-md-3 col-sm-6 mb-3">
                                     <a href="{{ url_for('tag_manager') }}" class="btn btn-outline-info w-100">
                                         <i class="fas fa-tags"></i><br>
                                         Manage Tags
                                     </a>
                                 </div>
-                                <div class="col-md-4 col-sm-6 mb-3">
+                                <div class="col-md-3 col-sm-6 mb-3">
                                     <a href="{{ url_for('recipe_list') }}" class="btn btn-outline-success w-100">
                                         <i class="fas fa-utensils"></i><br>
                                         View Recipes
